<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration">

    <EditText
        android:id="@+id/editTxtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/userNamwHint"
        android:inputType="textPersonName"
        android:password="false" />

    <EditText
        android:id="@+id/editTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPersonName"
        android:password="true" />

    <EditText
        android:id="@+id/editTextConfirmpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/confirmpwHint"
        android:inputType="textPersonName"
        android:password="true" />

    <EditText
        android:id="@+id/editTxtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/phoneHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTxtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/AgeHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTxtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnRegisterDesc" />

    <TextView
        android:id="@+id/txtViewBottomLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:linksClickable="true"
        android:text="@string/txtViewBtmLineDesc" />

    <TextView
        android:id="@+id/txtViewBtmLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#54302C99"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:linksClickable="true"
        android:text="@string/txtViewBtmLoginDesc" />
</LinearLayout>