<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SQLiteDevopActivity">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/edtNameHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edPriceHint"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/devopImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/edtPrice"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/imageViewDesc"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btnChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/devopImg"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginBottom="45dp"
        android:layout_toEndOf="@+id/devopImg"
        android:layout_toRightOf="@+id/devopImg"
        android:text="@string/btnChooseTxt" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/devopImg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/btnAddDesc" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdd"
        android:layout_alignStart="@+id/btnAdd"
        android:layout_alignLeft="@+id/btnAdd"
        android:layout_marginTop="18dp"
        android:text="@string/btnListDesc" />


</RelativeLayout>