<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imgItemDesc"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgItem"
        android:layout_alignEnd="@+id/imgItem"
        android:layout_alignRight="@+id/imgItem"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/txtNameDesc"
        android:textAlignment="center"
        android:textColor="#0e11d1"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName"
        android:layout_alignEnd="@+id/txtName"
        android:layout_alignRight="@+id/txtName"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/txtPriceDesc"
        android:textAlignment="center"
        android:textColor="#ce1309"
        android:textSize="17sp" />


</RelativeLayout>